--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,34 @@
 @import "fonts";
 @import "typography";
 
+@import "./blocks/container.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/header.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/page.scss";
+@import "./blocks/museum.scss";
+@import "./blocks/current-events.scss";
+@import "./blocks/exhibition.scss";
+@import "./blocks/lection.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/subscription.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/schedule.scss";
+@import "./blocks/slider.scss";
+
 body {
-  background: $c-gray;
+  margin: 0;
+  background: #fff;
+}
+
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+  font-weight: normal;
+}
+
+.bold {
+  font-weight: bold;
 }
