Menu background changed

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,13 +1,21 @@
 .menu {
-  background-color: $d-green;
+  background-color: rgba(77, 77, 77, 0.483);
+  height: 100vh;
   color: #fff;
 
   &__content {
     padding: 27px 0;
-
+    background-color: $d-green;
+    margin: 0;
+    padding: 28px 20px;
+  
     @include tablet {
+      padding: 40px;
       display: flex;
-      padding: 40px 0;
+    }
+  
+    @include desktop {
+      padding: 40px 55px;
     }
   }
   &__cross-icon {
@@ -35,7 +43,6 @@
 
   &__nav-item {
     margin-bottom: 24px;
-    // height: max-content;
 
     @include desktop {
       margin-bottom: 30px;
