--- a/src/styles/bloks/menu.scss
+++ b/src/styles/bloks/menu.scss
@@ -27,9 +27,10 @@
 
       &_conteiner {
         display: flex;
+        width: 300px;
 
         @include onTablet() {
-          max-width: 350px;
+          width: 350px;
         }
       }
 
@@ -49,23 +50,23 @@
         padding-left: 30px;
         margin-bottom: 24px;
 
-        &::after {
-          content: "";
-          width: 100%;
-          height: 1px;
-          background-color: rgba(255, 255, 255, 0.5);
+        // &::after {
+        //   content: "";
+        //   width: 100%;
+        //   height: 1px;
+        //   background-color: rgba(255, 255, 255, 0.5);
 
-          @include onTablet() {
-            width: 1px;
-            height: 145px;
-            position: absolute;
-            left: 400px;
-          }
+        //   @include onTablet() {
+        //     width: 1px;
+        //     height: 145px;
+        //     position: absolute;
+        //     left: 400px;
+        //   }
 
-          @include onDeskTop() {
-            left: 480px;
-          }
-        }
+        //   @include onDeskTop() {
+        //     left: 480px;
+        //   }
+        // }
 
         &_item {
           display: block;
@@ -85,6 +86,20 @@
             }
           }
         }
+      }
+    }
+
+    &_line {
+      margin-bottom: 24px;
+
+      width: 100%;
+      height: 1px;
+      background-color: rgba(255, 255, 255, 0.5);
+    
+      @include onTablet {
+        margin: 0 auto;
+        width: 1px;
+        height: 145px;
       }
     }
 
