--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -73,6 +73,11 @@
     margin-bottom: 64px;
     padding: 0;
 
+    &--email {
+      text-decoration: none;
+      color: #0f0e08;
+    }
+
     &-nav {
       margin-bottom: 16px;
 
