--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -5,7 +5,7 @@
   align-items: flex-start;
   top: 0;
   height: 399px;
-  padding: 30px 55px 0 25px;
+  padding: 25px 20px 0 25px;
   width: 100vw;
 
   z-index: 1;
@@ -80,8 +80,8 @@
 
   &__link {
 
-    display: inline-block;
-    padding-bottom: 8px;
+    // display: inline-block;
+    // padding-bottom: 8px;
     font-family: Montserrat, sans-serif;
     font-weight: 500;
     font-size: 16px;
@@ -97,6 +97,7 @@
       &::after {
         content: "";
         display: inline-block;
+        position: absolute;
 
         width: 10px;
         height: 15px;
@@ -106,6 +107,7 @@
         background-position: center;
         background-size: contain;
         background-repeat: no-repeat;
+        transform: translateY(10%);
       }
     }
 
@@ -133,6 +135,12 @@
       @include onTablet {
         grid-row: 1/1;
       }
+    }
+  }
+
+  &__br {
+    @include onDesktop {
+      display: none;
     }
   }
 
