--- a/src/styles/blocks/flex.scss
+++ b/src/styles/blocks/flex.scss
@@ -1,13 +1,14 @@
 .flex {
   display: flex;
-
   &-w {
     flex-direction: column;
   }
 
   &_wq {
     margin-right: 15px;
+    // width: 200px;
     @include onDesktop {
+      // width: 230px;
       margin-right: 115px;
     }
 
