fixed the menu on the flipped iphone se

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -13,6 +13,10 @@
     height: 50vh;
   }
 
+  @include iPhoneSEHorizontal {
+    height: 100vh;
+  }
+
   font-family: "IBM Plex Sans", sans-serif;
 
   transform: translateY(-100%);
