--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,12 @@
   }
 }
 
+@mixin iPhoneSEHorizontal {
+  @media (min-width: 667px) and (max-width: 668px) {
+    @content;
+  }
+}
+
 body {
   overflow-x: hidden;
   max-width: 1440px;
