fixed interactive elements

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -57,6 +57,10 @@
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
+
+      &:hover {
+        filter: invert(27%) sepia(47%) saturate(593%) hue-rotate(117deg) brightness(91%) contrast(90%);
+      }
     }
 
     &-insta {
@@ -67,6 +71,10 @@
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
+
+      &:hover {
+        filter: invert(27%) sepia(47%) saturate(593%) hue-rotate(117deg) brightness(91%) contrast(90%);
+      }
     }
   }
 
@@ -144,6 +152,10 @@
     text-decoration: none;
     font-size: 14px;
     color: $font-color-main;
+
+    &:hover {
+      color: $accent-color;
+    }
   }
 
   &__copyright {
