--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -90,6 +90,10 @@
     color: #fff;
     font-weight: 500;
 
+    &:hover {
+      color: rgb(190, 237, 160);
+    }
+
     @include onDesktop {
       font-size: 22px;
     }
