--- a/src/styles/bloks/content.scss
+++ b/src/styles/bloks/content.scss
@@ -36,7 +36,7 @@
 
         background-repeat: no-repeat;
         background-size: contain;
-        width: 280px;
+        width: 100%;
         height: 210px;
         transition: transform 1s;
 
@@ -255,6 +255,8 @@
         }
 
         &_img {
+          display: flex;
+          margin: 0 auto;
           width: 280px;
           height: 410px;
 
