--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -188,10 +188,7 @@
       }
 
       & .header__buy-button-text::before {
-        content: "Купити квитки";
-        font-family: "Oswald", sans-serif;
-        font-weight: 200;
-        font-size: 24px;
+        content: "КУПИТИ КВИТКИ";
       }
 
       & .header__buy-button-arrow {
