--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -96,6 +96,7 @@
     width: 70px;
     height: 70px;
     margin-left: 30px;
+    cursor: pointer;
     transition: all 0.3s;
 
     @include tablet {
