Images overflow and contact links changed

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -142,4 +142,10 @@
       justify-content: space-between;
     }
   }
+
+  &__contact-link {
+    display: block;
+    text-decoration: none;
+    color: #0F0E08;
+  }
 }
