--- a/src/styles/block/about.scss
+++ b/src/styles/block/about.scss
@@ -73,7 +73,7 @@
         text-align: left;
         padding-left: 55px;
         padding-bottom: 50px;
-        margin-bottom: 88px;
+        margin-bottom: 0;
       }
     }
 
