--- a/src/styles/block/header.scss
+++ b/src/styles/block/header.scss
@@ -13,10 +13,16 @@
   }
 
   &__menu-close {
-    position: absolute;
-    top: 33px;
-    left: 0;
+    margin-top: 30px;
     transition: 0.5s;
+
+    @include onTablet {
+      margin-left: 0;
+    }
+
+    @include onDesktop {
+      margin-left: -70px;
+    }
 
     &:hover {
       transform: rotate(180deg) scale(1.5);
