--- a/src/styles/block/menu.scss
+++ b/src/styles/block/menu.scss
@@ -110,6 +110,8 @@
     }
 
     &--top {
+      display: flex;
+      flex-direction: row;
       border-bottom: 1px solid $colorWhite;
       margin-bottom: 24px;
 
