--- a/src/styles/bloks/page.scss
+++ b/src/styles/bloks/page.scss
@@ -10,16 +10,17 @@
 
   scroll-behavior: smooth;
   width: 100vw;
-  overflow-x: hidden;
-
-  &_content-with-menu {
-    overflow: hidden;
-  }
+  // overflow-x: hidden;
 
   &_content {
     position: relative;
     margin: 0 auto;
     max-width: 1170px;
+    overflow-x: hidden;
+
+    &-with-menu {
+      overflow: hidden;
+    }
 
     &_menu {
       position: absolute;
