--- a/src/styles/bloks/content.scss
+++ b/src/styles/bloks/content.scss
@@ -34,8 +34,8 @@
       &_img {
         margin-bottom: 40px;
 
-        background-repeat: no-repeat;
-        background-size: contain;
+        object-fit: cover;
+        object-position: center;
         width: 100%;
         height: 210px;
         transition: transform 1s;
@@ -260,6 +260,8 @@
           width: 280px;
           height: 410px;
 
+          object-fit: cover;
+          object-position: center;
           transition: transform 1s;
 
           &:hover {
