Hover effects added, menu changed, slidder buttons was hidden on desktop

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -15,6 +15,8 @@
     }
   
     @include desktop {
+      display: grid;
+      grid-template-columns: 1fr 205px 1fr;
       padding: 40px 55px;
     }
   }
@@ -32,6 +34,10 @@
     display: flex;
     column-gap: 34px;
     height: max-content;
+
+    @include desktop {
+      column-gap: 106px;
+    }
   }
 
   &__nav-list {
@@ -75,7 +81,7 @@
     }
 
     @include desktop {
-      margin: 0 102px;
+      margin: 0 auto;
     }
   }
 
