--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -55,6 +55,8 @@
     text-decoration: none;
     object-fit: contain;
     object-position: center;
+
+    @include hover(transform, scale(1.3))
   }
 
   &__subtitle {
@@ -121,6 +123,8 @@
     font-size: 14px;
     line-height: 100%;
     color: #0F0E08;
+
+    @include hover(color, #0f0e089b)
   }
 
   &__designer {
@@ -147,5 +151,7 @@
     display: block;
     text-decoration: none;
     color: #0F0E08;
+
+    @include hover(color, #0f0e089b)
   }
 }
