--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -73,9 +73,24 @@
     margin-bottom: 64px;
     padding: 0;
 
+    &--tel {
+      text-decoration: none;
+      color: #0f0e08;
+
+      &:hover {
+        font-weight: bold;
+      }
+
+    }
+
     &--email {
       text-decoration: none;
       color: #0f0e08;
+
+      &:hover {
+        font-weight: bold;
+      }
+
     }
 
     &-nav {
