page was created

--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,17 @@
-%h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+%montserrat {
+  font-family: "Montserrat";
+  font-style: normal;
+  line-height: 100%;
+}
+
+%fontIBM {
+  font-family: "IBM Plex Sans";
+  font-style: normal;
+  line-height: 150%;
+}
+
+%image-sets {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
