--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,12 @@
 @import "utils";
-@import "fonts";
 @import "typography";
+@import "blocks/page";
+@import "blocks/container.scss";
+@import "blocks/icon.scss";
 
-body {
-  background: $c-gray;
-}
+@import "blocks/header.scss";
+@import "blocks/menu.scss";
+@import "blocks/events.scss";
+@import "blocks/gallery.scss";
+@import "blocks/subscribe.scss";
+@import "blocks/footer.scss";
