fix form and navigation

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -13,10 +13,12 @@
 
     &--with-menu {
       overflow: hidden;
+      z-index: 1;
     }
   }
 
   &__menu {
+    z-index: 2;
     position: fixed;
     top: 0;
     left: 0;
