hover effects & favicon were added

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -46,6 +46,10 @@
   &__image {
     margin: 0 0 24px;
 
+    &:hover {
+      transform: scale(1.1);
+    }
+
     @include onTablet {
       margin: 0 0 40px;
     }
@@ -90,6 +94,10 @@
     font-size: 16px;
     color: $colorGreen;
     text-decoration: none;
+    
+    &:hover {
+      transform: scale(1.1)
+    }
   }
 
   &__subtitle {
