--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -21,6 +21,10 @@
     width: 68px;
     height: 72px;
 
+    &:hover {
+      transform: scale(1.1);
+    }
+
     @include onTablet {
       margin: 0 0 62px;
     }
@@ -32,6 +36,10 @@
   }
 
   &__link {
+
+    &:hover {
+      transform: scale(1.2);
+    }
 
     &--facebook {
       display: block;
@@ -137,6 +145,11 @@
     @extend %fontIBM;
     font-weight: 400;
     font-size: 14px;
+    width: max-content;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 
   &__info {
