--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -64,6 +64,10 @@
 
     margin: 0 0 20px;
 
+    &:hover {
+      transform: scale(1.05);
+    }
+
     @include onTablet {
       width: 340px;
       height: 543px;
