--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -40,6 +40,12 @@
     padding: 9px 3px;
   }
 
+  &__menu-button {
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+
   &__logo {
     position: relative;
     top: 9px;
@@ -49,6 +55,10 @@
     width: 55px;
     height: 61px;
     margin: 0 auto;
+
+    &:hover {
+      transform: scale(1.1);
+    }
 
     @include onTablet {
       margin: 0;
@@ -91,6 +101,11 @@
   &__wrapper {
     display: flex;
     justify-content: center;
+    
+    &:hover {
+      transform: scale(1.1);
+    }
+
 
     @include onTablet {
       justify-content: start;
@@ -98,6 +113,8 @@
 
     @include onDesktop {
       justify-content: center;
+      width: 270px;
+      margin: 0 auto;
     }
   }
 
@@ -157,6 +174,10 @@
       height: 1px;
       background-color: $colorGreen;
       margin-right: 20px;
+    }
+
+    &:hover {
+      transform: rotate(-90deg) scale(1.1);
     }
 
     @include onDesktop {
