--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -50,6 +50,9 @@
     width: 230px;
     height: 50px;
     padding: 0 0 0 24px;
+    &:hover {
+      transform: scale(1.1);
+    }
 
     @include onTablet {
       width: 374px;
@@ -65,6 +68,11 @@
     height: 50px;
     background-color: $colorOrange;
     border: none;
+    cursor: pointer;
+
+    &:hover {
+      transform: scale(1.1);
+    }
 
     @include onTablet {
       width: 70px;
