--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -28,6 +28,12 @@
     }
   }
 
+  &__button {
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+
   &__contacts {
     display: flex;
     flex-direction: column;
@@ -115,6 +121,11 @@
     font-weight: 400;
     font-size: 16px;
     color: $colorWhite;
+    width: max-content;
+
+    &:hover {
+      transform: scale(1.1);
+    }
 
     @include onDesktop {
       font-size: 22px;
