fixed the announcement section

--- a/src/styles/blocks/sections.scss
+++ b/src/styles/blocks/sections.scss
@@ -88,13 +88,11 @@
   }
 
   &-description {
-    /*display: inline-block;*/
     font-weight: 500;
     font-size: 16px;
     line-height: 16px;
     color: #687480;
     text-align: left;
-    /*margin-bottom: 32px;*/
   }
 
   &-date {
@@ -108,7 +106,6 @@
 
   &-name {
     display: flex;
-    justify-content: center;
     width: 100%;
     font-weight: 400;
     font-size: 28px;
@@ -122,6 +119,7 @@
 
     @include onDeskTop {
       margin-top: 23px;
+      justify-content: center;
     }
   }
 
@@ -158,13 +156,13 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
     padding: 24px 20px;
     margin-top: 448px;
     width: 90%;
 
     @include onDeskTop {
       width: 50%;
+      justify-content: center;
     }
 
     background-color: #fff;
@@ -174,7 +172,11 @@
       gap: 15px;
 
       @include onDeskTop {
-        gap: 90px;
+        gap: 130px;
+      }
+
+      @include onTablet {
+        gap: 140px;
       }
     }
   }
