--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -2,3 +2,10 @@
   font-family: "Roboto", sans-serif;
   font-weight: 400;
 }
+
+%burgerPropperty {
+  width: 18px;
+  height: 2px;
+  background-color: $mainDarkColor;
+  transition: transform 0.3s ease-in-out;
+}
