--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,12 @@
-$c-gray: #eee;
+$greenColor: #1a5a4c;
+$greenColorTransparent: rgba(26, 90, 76, 0.5);
+$redColor: #f14a27;
+$mainDarkColor: #0f0e08;
+$grayColor: #e5e6eb;
+$eventNameColor: #687480;
+$textColor: #4e4e4e;
+$whiteColor: #fff;
+$whiteColorTransparent: rgba(255, 255, 255, 0.5);
+
+// $burgerLineWidth: 18px;
+// $burgerLineHeight: 2px;
