--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,23 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "blocks/page.scss";
+@import "blocks/header.scss";
+@import "blocks/container.scss";
+@import "blocks/nav.scss";
+@import "blocks/side-menu.scss";
+@import "blocks/events.scss";
+@import "blocks/gallery.scss";
+@import "blocks/subscription.scss";
+@import "blocks/footer.scss";
+
+@import "blocks/logo.scss";
+@import "blocks/grid.scss";
+@import "blocks/burger.scss";
+@import "blocks/lectures.scss";
+@import "blocks/button.scss";
+@import "blocks/links-group.scss";
+@import "blocks/schedule.scss";
+@import "blocks/event.scss";
+@import "blocks/date.scss";
+@import "blocks/slider.scss";
