--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -4,8 +4,14 @@
 
   @include onDeskTop {
     display: flex;
-    justify-content: space-between;
+    //justify-content: space-between;
+    flex-direction: row;
     padding: 48px 54px;
+  }
+
+  @include onTablet {
+    display: flex;
+    flex-direction: row;
   }
 
   &__logo-container {
@@ -17,6 +23,10 @@
     @include onDeskTop {
       flex-direction: column;
       width: 150px;
+    }
+
+    @include onTablet {
+      width: 98px;
     }
   }
 
@@ -36,15 +46,19 @@
     display: flex;
     justify-content: space-between;
     margin-top: 40px;
-    margin-left: 20px;
+    //margin-left: 20px;
     gap: 30px;
     margin-bottom: 80px;
 
     @include onDeskTop {
       display: flex;
       flex-direction: row;
-      gap: 70px;
-      margin-right: 30%;
+      //gap: 70px;
+      //margin-right: 30%;
+    }
+
+    @include onTablet {
+      margin-left: 154px;
     }
 
   }
@@ -60,6 +74,13 @@
 
     @include onDeskTop {
       flex-direction: column;
+    }
+
+    @include onTablet {
+      flex-direction: column;
+      justify-content: right;
+      margin-top: 50px;
+      margin-left: 36px;
     }
 
     &-pic {
@@ -117,6 +138,10 @@
       border-right: 1px solid #1a5a4c80;
       border-bottom: 1px solid transparent;
     }
+
+    @include onTablet {
+      margin-top: 30px;
+    }
   }
 
   &__nav {
@@ -148,6 +173,10 @@
     }
 
     @include onDeskTop {
+      display: none;
+    }
+
+    @include onTablet {
       display: none;
     }
   }
