--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -42,13 +42,21 @@
       display: inline-block;
       width: 230px;
       height: 50px;
-      border: 1px solid transdivarent;
+      border: 1px solid transparent;
       text-align: center;
       box-sizing: border-box;
       font-weight: 400;
       font-size: 14px;
       line-height: 14px;
       color: #687480;
+
+      @include onDeskTop {
+        margin-right: 30px;
+      }
+
+      @include onTablet {
+        margin-right: 16px;
+      }
 
       &:hover {
         cursor: pointer;
@@ -63,10 +71,10 @@
       background-image: url(../images/search_orange.png);
       color: #000;
       padding: 13px;
-      border: 1px solid transdivarent;
+      border: 1px solid transparent;
       text-decoration: none;
       text-align: center;
-      
+
       &:hover {
         cursor: pointer;
       }
