--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,15 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "./utils/mixins";
+@import "./utils/vars";
+
+@import "./utils/blocks/header.scss";
+@import "./utils/blocks/resset.scss";
+
+@import "./utils/blocks/container.scss";
+@import "./utils/blocks/menu.scss";
+@import "./utils/blocks/ivents.scss";
+@import "./utils/blocks/galer.scss";
+@import "./utils/blocks/subscription.scss";
+@import "./utils/blocks/footer.scss";
