page was corrected

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -86,6 +86,27 @@
     }
   }
 
+  &__map {
+
+  }
+
+  &__map-link {
+    display: block;
+    text-decoration: none;
+    color: #000;
+    max-width: 130px;
+
+    margin: 20px 0 0;
+
+    @include onTablet {
+      max-width: 220px;
+    }
+
+    &:hover {
+      transform: scale(1.1)
+    }
+  }
+
   &__text-bold {
     @extend %fontIBM;
     font-weight: 600;
