--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,9 +1,12 @@
 .page {
   scroll-behavior: smooth;
+
   &__body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
+    transition: 0.3s;
   }
 
   &__menu {
