Nav-menu was added

--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -19,12 +19,12 @@
   grid-template-columns: repeat(12, 1fr);
   column-gap: 30px;
   max-width: $desktop-max-width;
-  padding: 0 55px;
+  padding: 0 $desktop-side-padding;
 }
 
 @mixin grid-tablet {
   grid-template-columns: repeat(6, 1fr);
   column-gap: 30px;
   max-width: $tablet-max-width;
-  padding: 0 39px;
+  padding: 0 $tablet-side-padding;
 }
