--- a/src/styles/utils/_reset.scss
+++ b/src/styles/utils/_reset.scss
@@ -8,7 +8,8 @@ h1,
 h2,
 h3,
 p,
-button {
+button,
+ul {
   margin: 0;
   padding: 0;
   font-family: inherit;
@@ -25,4 +26,9 @@ button {
 
 a {
   text-decoration: none;
+  color: inherit;
+}
+
+ul {
+  list-style: none;
 }
