--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,6 +1,9 @@
 $desktop-max-width: 1280px;
 $tablet-max-width: 980px;
 
+$desktop-side-padding: 55px;
+$tablet-side-padding: 39px;
+
 $smooth-transition: 0.3s;
 
 $black: #000;
