--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -90,6 +90,7 @@
     position: absolute;
     top: 15px;
     left: 60px;
+    // z-index: -1;
 
     width: 70px;
   }
@@ -99,6 +100,9 @@
   }
 
   &__image {
+    position: absolute;
+    z-index: -1;
+
     width: 100%;
     max-height: 655px;
 
