--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@
 
 @import "./blocks/page.scss";
 @import "./blocks/header.scss";
+@import "./blocks/menu.scss";
 @import "./blocks/grid.scss";
 @import "./blocks/button.scss";
 @import "./blocks/events.scss";
