--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,29 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
+@import "./blocks/container.scss";
+@import "./blocks/events.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/form.scss";
+@import "./blocks/fromTo.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/gird.scss";
+@import "./blocks/header.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/nav.scss";
+@import "./blocks/page.scss";
+@import "./blocks/slider.scss";
+@import "./blocks/subscribe.scss";
+@import "./blocks/tickets.scss";
+
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;200;300;400;500;600;700&family=Montserrat:wght@100;300;400;500;600;700&display=swap");
+
+img {
+  transition: transform 300ms;
+
+  &:hover {
+    transform: scale(1.03);
+  }
 }
