--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -52,10 +52,20 @@
   &--facebook {
     background-image: url(../images/facebook.png);
     height: 24px;
+    transition: transform 300ms;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 
   &--instagram {
     background-image: url(../images/instagram.png);
     height: 24px;
+    transition: transform 300ms;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 }
