--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -26,17 +26,17 @@
     font-size: 14px;
     line-height: 150%;
     color: #0f0e08;
+    margin: 0;
   }
 
   &__line {
-    width: 1px;
-    height: 280px;
+    width: 280px;
+    height: 1px;
     background: rgba(26, 90, 76, 0.5);
-    transform: rotate(-90deg);
 
     @include onTablet {
-      width: 1px;
-      height: 460px;
+      width: 460px;
+      height: 1px;
     }
 
     @include onDesktop {
@@ -48,9 +48,13 @@
   }
 
   &__list {
-    margin: 0 0 40px;
+    margin: 0;
     padding: 0;
     list-style: none;
+
+    @include onTablet {
+      margin: 0 0 40px;
+    }
 
     @include onDesktop {
       margin: 0 0 48px;
@@ -58,7 +62,9 @@
   }
 
   &__item {
-    margin-bottom: 20px;
+    @include onTablet {
+      margin-bottom: 20px;
+    }
 
     &:last-child {
       margin-bottom: 0;
