--- a/src/styles/blocks/links-group.scss
+++ b/src/styles/blocks/links-group.scss
@@ -36,7 +36,7 @@
     color: $whiteColor;
 
     @include hover(text-decoration, underline);
-    @include hover(opacity, 70%);
+    @include hover(opacity, 0.7);
 
     @include onDesktop {
       max-width: 170px;
