--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,10 +1,10 @@
-@mixin iPadMini {
+@mixin onTablet {
   @media (min-width: 768px) {
     @content;
   }
 }
 
-@mixin onDesctop {
+@mixin onDesktop {
   @media (min-width: 1280px) {
     @content;
   }
