--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,19 +1,27 @@
 .footer {
-  text-align: center;
-  font-family: $fonts-2;
-  height: 100px;
-  font-weight: 300;
-  font-size: 12px;
-  line-height: 19px;
-  color: $color-2;
+  padding-bottom: 130px;
 
-  @include iPadMini {
+  @include onTablet {
     display: flex;
     justify-content: space-between;
-    margin: 0 34px;
+    padding: 0 34px 36px;
   }
 
-  @include onDesctop {
-    margin: 0 55px 35px;
+  @include onDesktop {
+    padding: 0 55px 35px;
+  }
+
+  &__text {
+    font-family: $fonts-2;
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 140.62%;
+    text-align: center;
+    color: $color-2;
+    margin-bottom: 10px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 }
