--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,173 +1,130 @@
 .gallery {
-  margin: 0;
+  margin-bottom: 100px;
 
-  @include onDesctop {
-    margin: 0 55px 200px;
+  @include onTablet {
+    padding-left: 34px;
   }
 
-  &__title {
-    font-size: 36px;
-    line-height: 36px;
-    text-align: center;
-    margin-bottom: 40px;
-
-    @include iPadMini {
-      font-size: 48px;
-      line-height: 48px;
-      text-align: left;
-      margin-left: 34px;
-    }
-
-    @include onDesctop {
-      margin: 0 0 56px;
-    }
+  @include onDesktop {
+    margin-bottom: 200px;
+    padding: 0 55px;
   }
-
-  &__images {
-    display: flex;
+  
+  &__image {
+    padding-left: 20px;
     margin-bottom: 20px;
-    perspective: 400px;
     
 
-    @include iPadMini {
+    @include onTablet {
+      padding: 0;
       margin-bottom: 32px;
     }
 
-    @include onDesctop {
-      display: flex;
+    @include onDesktop {
+      margin-bottom: 0;
+    }
+  }
+
+  &__image-painting {
+    transition: transform 0.3s;
+
+    @include onTablet {
+      width: 344px;
+      height: 543px;
+    }
+
+    &:hover {
+      transform: translateZ(20px);
+    }
+  }
+
+  &__image-painting-goose {
+    @include onTablet {
+      display: inherit;
+    }
+
+    @include onDesktop {
+      display: none;
+    }
+  }
+
+  &__image-stripe1 {
+    @include onTablet {
+      display: none;
+    }
+  }
+
+  &__image-stripe2 {
+    @include onTablet {
+      display: inherit;
+    }
+
+    @include onDesktop {
+      display: none;
+    }
+  }
+
+  &__block {
+    display: flex;
+    gap: 16px;
+    perspective: 400px;
+    @include onDesktop {
       gap: 30px;
+      margin-bottom: 30px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
   }
 
-  &__image-1 {
-    background-image: url(../images/Rectangle3.png);
-    width: 280px;
-    height: 410px;
-    margin: 0 20px;
-    transition: transform 350ms;
-
-    &:hover {
-      transform: translateZ(100px);
-      cursor: pointer;
-    }
-
-    @include iPadMini {
-      background-size: cover;
-      width: 340px;
-      height: 540px;
-      margin: 0 20px 0 34px;
-    }
-
-    @include onDesctop {
-      height: 600px;
+  &__image-painting-bride {
+    @include onDesktop {
       width: 370px;
-      background-size: cover;
-      margin: 0;
-    }
-  }
-
-  &__image-2 {
-    transition: transform 350ms;
-
-    &:hover {
-      transform: translateZ(100px);
-      cursor: pointer;
-    }
-
-    @include iPadMini {
-      background-image: url(../images/Rectangle2.png);
-      width: 340px;
-      height: 540px;
-      margin-right: 20px;
-    }
-
-    @include onDesctop {
-      display: none;
-    }
-  }
-
-  &__image-3 {
-    transition: transform 350ms;
-
-    &:hover {
-      transform: translateZ(100px);
-      cursor: pointer;
-    }
-
-    @include onDesctop {
-      background-image: url(../images/Rectangle6.png);
-      background-size: cover;
       height: 600px;
+    }
+  }
+
+  &__image-painting-winter {
+    @include onDesktop {
+      display: inherit;
       width: 770px;
+      height: 600px;
     }
   }
 
-  &__stripe {
-    background-image: url(../images/Stripe1.png);
-    height: 410px;
-    width: 5px;
-
-    @include iPadMini {
-      background-image: url(../images/Stripe2.png);
-      height: 540px;
-      width: 13px;
-    }
-
-    @include onDesctop {
-      display: none;
+  &__image-painting-park {
+    @include onDesktop {
+      display: inherit;
+      width: 770px;
+      height: 360px;
     }
   }
 
-  &__slide {
+  &__image-painting-sea {
+    @include onDesktop {
+      display: inherit;
+      width: 370px;
+      height: 360px;
+    }
+  }
+
+  &__carousel {
     display: flex;
     justify-content: center;
-    gap: 20px;
-    margin-bottom: 100px;
+    gap: 22px;
 
-    @include onDesctop {
+    @include onDesktop {
       display: none;
     }
   }
 
-  &__images-2 {
-    display: flex;
-    perspective: 400px;
-
-    @include onDesctop {
-      display: flex;
-      gap: 30px;
-    }
-  }
-
-  &__image-5 {
-    transition: transform 350ms;
-
+  &__button {
+    background-image: url(../images/Ellipse3.1.png);
+    width: 10px;
+    height: 10px;
     &:hover {
-      transform: translateZ(100px);
-      cursor: pointer;
-    }
-
-    @include onDesctop {
-      background-image: url(../images/Rectangle7.png);
-      background-size: cover;
-      width: 770px;
-      height: 360px;
-    }
-  }
-
-  &__image-6 {
-    transition: transform 350ms;
-
-    &:hover {
-      transform: translateZ(100px);
-      cursor: pointer;
-    }
-
-    @include onDesctop {
-      background-image: url(../images/Rectangle8.png);
-      background-size: cover;
-      width: 370px;
-      height: 360px;
+      background-image: url(../images/Ellipse3.png);
     }
   }
 }
