--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,19 +1,32 @@
 .page {
   font-family: "Montserrat", sans-serif;
-  background-color: #ccc;
+  scroll-behavior: smooth;
+  background-color: #eee;
 
   &__body {
     margin: 0;
     width: 320px;
-    height: 100%;
-    background-color: $color-5;
+    background-color: #fff;
 
-    @include iPadMini {
+    @include onTablet {
       width: 768px;
     }
 
-    @include onDesctop {
+    @include onDesktop {
       width: 1280px;
+    }
+  }
+
+  &__nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    transform: translateX(-100%);
+    transition: transform 0.5s;
+
+    &:target {
+      transform: translateX(0);
     }
   }
 }
