--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -1,30 +1,101 @@
 .schedule {
-  font-family: $fonts-2;
-  font-weight: 400;
-  color: $color-2;
+  padding: 0 20px;
 
-  @include onDesctop {
-    margin-left: 130px;
+  @include onTablet {
+    display: flex;
+    justify-content: space-between;
+    gap: 40px;
+    padding: 0 35px;
   }
 
-  &__item {
-    width: 130px;
+  @include onDesktop {
+    padding: 0 155px 48px 102px;
+  }
+
+  &--width {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    padding: 0;
+
+    @include onTablet {
+      padding: 0;
+    }
+  }
+
+  &__subtitle {
+    font-family: $fonts-2;
+    font-weight: 400;
     font-size: 14px;
-    line-height: 20px;
-    margin-bottom: 20px;
+    line-height: 140%;
+    color: $color-5;
+    padding-bottom: 20px;
+
+    &--color {
+      color: $color-2;
+    }
   }
 
   &__text {
-    width: 130px;
+    font-weight: 400;
     font-size: 14px;
-    line-height: 21px;
-    
-    @include iPadMini {
-      width: 220px;
+    line-height: 150%;
+    color: $color-5;
+    padding-bottom: 16px;
+
+    @include onTablet {
+      width: 168px;
     }
 
-    @include onDesctop {
-      width: 170px;
+    &--color {
+      color: $color-2;
     }
+  }
+
+  &__days {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 150%;
+    color: #fff;
+    padding-bottom: 27px;
+
+    @include onTablet {
+      width: 144px;
+      padding-top: 40px;
+    }
+
+    &--color {
+      color: $color-2;
+    }
+  }
+
+  &__box {
+    width: 130px;
+
+    @include onTablet {
+      width: 220px;
+    }
+  }
+
+  &__list {
+    list-style: none;
+  }
+
+  &__link {
+    text-decoration: none;
+    font-family: $fonts-2;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 150%;
+    color: $color-2;
+
+    &:hover {
+      color: $color-6;
+    }
+  }
+
+  &__box-arrow {
+    height: max-content;
+    display: block;
   }
 }
