--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -1,21 +1,33 @@
 .title {
-  margin-bottom: 20px;
-  font-size: 45px;
-  line-height: 45px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 100%;
   text-align: center;
+  color: $color-2;
+  margin-bottom: 40px;
 
-  @include iPadMini {
-    font-size: 54px;
-    line-height: 65px;
-    margin-bottom: 40px;
+  @include onTablet {
+    font-size: 48px;
+    line-height: 100%;
     text-align: start;
-    width: 340px;
+    margin-bottom: 48px;
   }
 
-  @include onDesctop {
-    font-size: 72px;
-    line-height: 85px;
-    margin-bottom: 90px;
-    width: 470px;
+  @include onDesktop {
+    margin-bottom: 58px;
+  }
+
+  &--color-white {
+    color: $color-5;
+    padding: 88px 0 20px;
+    margin-bottom: 0;
+
+    @include onTablet {
+      padding: 82px 0 16px;
+    }
+
+    @include onDesktop {
+      padding: 163px 0 16px;
+    }
   }
 }
