--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -1,10 +1,61 @@
 .contacts {
-  display: flex;
-  gap: 20px;
-  margin: 0 20px;
+  margin-bottom: 40px;
 
-  @include iPadMini {
-    position: absolute;
-    left: 134px;
+  @include onTablet {
+    margin-bottom: 64px;
+  }
+
+  @include onDesktop {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 87px;
+  }
+
+  &__content {
+    width: 280px;
+    padding: 0 20px;
+    
+    @include onTablet {
+      display: flex;
+      gap: 20px;
+      padding: 0 34px;
+    }
+
+    @include onDesktop {
+      padding: 0 55px;
+    }
+  }
+
+  &__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 40px;
+
+    @include onTablet {
+      display: flex;
+      flex-direction: column;
+      height: 150px;
+      margin: 0;
+      padding-right: 30px;
+    }
+  }
+
+  &__chain {
+    display: flex;
+    gap: 30px;
+  }
+
+  &__schedule {
+    border-bottom: 1px solid #1a5a4c80;
+
+    @include onTablet {
+      margin-bottom: 64px;
+    }
+
+    @include onDesktop {
+      border-bottom: none;
+      border-right: 1px solid #1a5a4c80;
+    }
   }
 }
