--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,7 +1,11 @@
 .container {
-  @include onDesctop {
-    display: flex;
-    justify-content: space-between;
-    margin: 0 55px 90px;
+  padding: 0 20px;
+
+  @include onTablet {
+    padding: 0 34px;
+  }
+
+  @include onDesktop {
+    padding: 0;
   }
 }
