--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -1,74 +1,38 @@
 .subscription {
-  height: 390px;
   background-image: url(../images/Rectangle4.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   margin-bottom: 50px;
 
-  @include iPadMini {
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    margin-bottom: 50px;
-  }
-
-  @include onDesctop {
+  @include onTablet {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+  }
+
+  @include onDesktop {
     height: 550px;
-    background-size: cover;
-    background-position: center;
-    margin-bottom: 47px;
+    margin-bottom: 48px;
   }
 
-  &__container {
-    
-    @include onDesctop {
-      width: 570px;
-      height: 224px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-    }
-  }
-
-  &__title {
-    font-weight: bold;
-    font-size: 36px;
-    line-height: 36px;
-    text-align: center;
-    color: $color-5;
-    padding-top: 80px;
-
-    @include iPadMini {
-      font-size: 48px;
-      line-height: 48px;
-      text-align: center;
-    }
-
-    @include onDesctop {
-      margin-bottom: 16px;
-      padding: 0;
-    }
-  }
-
+  
   &__text {
     font-family: $fonts-2;
     font-weight: 400;
     font-size: 18px;
-    line-height: 27px;
+    line-height: 150%;
     text-align: center;
     color: $color-5;
-    margin: 0 20px 50px;
+    padding: 0 20px 50px;
 
-    @include iPadMini {
-      font-size: 18px;
-      line-height: 18px;
+    @include onTablet {
+      line-height: 100%;
+      padding-bottom: 64px;
     }
 
-    @include onDesctop {
-      margin-bottom: 72px;
+    @include onDesktop {
+      padding-bottom: 72px;
     }
   }
 }
