Fixed links and added hover to picture

--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -59,9 +59,9 @@
   }
 
   &__form {
-    margin-top: 50px;
     width: 280px;
     display: flex;
+    margin: 50px auto 0;
     
     @include onTablet {
       width: 100%;
