--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -34,6 +34,16 @@
       margin-top: 56px;
     }
 
+    &-photo {
+      transition: all 0.3s;
+
+      &:hover {
+        transform: scale(1.04);
+        border-radius: 5px;
+      }
+    }
+    
+
     &-content--margin-top {
       margin-top: 30px;
     }
