--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -157,10 +157,12 @@
     font-size: 14px;
     line-height: 100%;
     color: #687480;
+    text-decoration: none;
 
     transform: rotate(-90deg);
     transform-origin: top left;
     margin-top: 115px;
+    transition: all 0.3s;
 
     &::before {
       content: "";
@@ -168,6 +170,10 @@
       border-bottom: 1px solid $first-color-green;
       width: 70px;
       margin-right: 20px;
+    }
+
+    &:hover {
+      transform: rotate(-90deg) scale(1.06);
     }
 
     @include onDesktop {
