--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -14,6 +14,14 @@
     width: 50%;
     margin: 0 auto;
     margin-top: 50px;
+    outline: none;
+
+    font-family: "Montserrat", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 14px;
+    color: #687480;
   
     @include desktop {
       margin-top: 70px;
