--- a/src/styles/blocks/tickets.scss
+++ b/src/styles/blocks/tickets.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   border: 1px solid $color-green;
+  cursor: pointer;
   
   &:hover {
     box-shadow: 0 0 4px #1a5a4c;
