--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,22 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
+@import "/components/header.scss";
+@import "/components/top-actions.scss";
+@import "/components/logo.scss";
+@import "/components/grid.scss";
+@import "/components/menu.scss";
+@import "/components/page.scss";
+@import "/components/exhebition.scss";
+@import "/components/lection.scss";
+@import "/components/gallery.scss";
+@import "/components/slider.scss";
+@import "/components/nav.scss";
+@import "/components/museum.scss";
+@import "/components/button.scss";
+@import "/components/footer.scss";
+@import "/components/subscription.scss";
+
+* {
+  transition: all 0.3s;
 }
