--- a/src/components/slider.scss
+++ b/src/components/slider.scss
@@ -102,14 +102,17 @@
 @include onTablet {
   #r1:checked ~ .slider__slide-s1 {
     margin-left: 0;
+    transition: 1s;
   }
 
   #r2:checked ~ .slider__slide-s1 {
     margin-left: -360px;
+    transition: 1s;
   }
 
   #r3:checked ~ .slider__slide-s1 {
     margin-left: -720px;
+    transition: 1s;
   }
 }
 
