--- a/src/components/footer.scss
+++ b/src/components/footer.scss
@@ -105,6 +105,8 @@
 
   &__schedule-list {
     margin-bottom: 21px;
+    list-style: none;
+    padding: 0;
   }
 
   &__title {
@@ -120,6 +122,7 @@
   &__weekend {
     margin-bottom: 70px;
 
+
     @include onTablet {
       margin-bottom: 64px;
     }
@@ -134,6 +137,7 @@
     color: inherit;
 
     transition: all 0.3s;
+    text-decoration: none;
 
     &:hover {
       color: $orangeColor;
