page was coorected

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -44,6 +44,7 @@
   }
 
   &__image {
+    transition: 0.3s;
     margin: 0 0 24px;
 
     &:hover {
@@ -94,6 +95,7 @@
     font-size: 16px;
     color: $colorGreen;
     text-decoration: none;
+    transition: 0.3s;
     
     &:hover {
       transform: scale(1.1)
@@ -210,6 +212,11 @@
     font-size: 16px;
     color: $colorGreen;
     text-decoration: none;
+    transition: 0.3s;
+
+    &:hover {
+      transform: scale(1.1)
+    }
   }
 
   &__paragraph {
