--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -20,6 +20,7 @@
     @extend %image-sets;
     width: 68px;
     height: 72px;
+    transition: 0.3s;
 
     &:hover {
       transform: scale(1.1);
@@ -36,6 +37,7 @@
   }
 
   &__link {
+    transition: 0.3s;
 
     &:hover {
       transform: scale(1.2);
@@ -86,15 +88,12 @@
     }
   }
 
-  &__map {
-
-  }
-
   &__map-link {
     display: block;
     text-decoration: none;
     color: #000;
     max-width: 130px;
+    transition: 0.3s;
 
     margin: 20px 0 0;
 
@@ -167,6 +166,7 @@
     font-weight: 400;
     font-size: 14px;
     width: max-content;
+    transition: 0.3s;
 
     &:hover {
       transform: scale(1.1);
