--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -61,6 +61,7 @@
     @extend %image-sets;
     width: 280px;
     height: 410px;
+    transition: 0.3s;
 
     margin: 0 0 20px;
 
@@ -75,7 +76,7 @@
 
     @include onDesktop {
       width: 100%;
-      background-size: contain;
+      object-fit: fill;
     }
 
     &--photo-1 {
