--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -41,6 +41,8 @@
   }
 
   &__menu-button {
+    transition: 0.3s;
+
     &:hover {
       transform: scale(1.1);
     }
@@ -55,6 +57,7 @@
     width: 55px;
     height: 61px;
     margin: 0 auto;
+    transition: 0.3s;
 
     &:hover {
       transform: scale(1.1);
@@ -101,6 +104,7 @@
   &__wrapper {
     display: flex;
     justify-content: center;
+    transition: 0.3s;
     
     &:hover {
       transform: scale(1.1);
@@ -166,6 +170,7 @@
     position: absolute;
     top: 580px;
     left: 0;
+    transition: 0.3s;
 
     &::before {
       content: "";
