--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -29,6 +29,8 @@
   }
 
   &__button {
+    transition: 0.3s;
+
     &:hover {
       transform: scale(1.1);
     }
@@ -122,6 +124,7 @@
     font-size: 16px;
     color: $colorWhite;
     width: max-content;
+    transition: 0.3s;
 
     &:hover {
       transform: scale(1.1);
