--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -50,6 +50,8 @@
     width: 230px;
     height: 50px;
     padding: 0 0 0 24px;
+    transition: 0.3s;
+
     &:hover {
       transform: scale(1.1);
     }
@@ -69,6 +71,7 @@
     background-color: $colorOrange;
     border: none;
     cursor: pointer;
+    transition: 0.3s;
 
     &:hover {
       transform: scale(1.1);
